Add button and prompt for user to make a new grid
If the user clicks the "start a new drawing button" they are prompted to
enter a number from 10-100. Only entries within the specified range
create a new grid.

--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
     <title>etch-a-sketch</title>
 </head>
 <body>
-    <div id="containerDiv">
+    <button id="newGridButton">START A NEW DRAWING</button>
+    <div id="gridContainer">
 
     </div>
 </body>
